<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    app:cardBackgroundColor="#f5f5f5"
    app:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/poster"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/dummy_poster" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/Platform.MaterialComponents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="Action, Adventure, Fantasy" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/dummy_rating"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/MyRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
            app:layout_constraintStart_toEndOf="@+id/tv_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_rating" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar"
            tools:text="@string/dummy_date" />


        <ImageButton
            android:id="@+id/img_favorites"
            android:contentDescription="@string/favorite_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_favorite_border_24dp" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>